prevent scrollbars in <pre> by wrapping long lines

--- a/template/style.css.sass
+++ b/template/style.css.sass
@@ -281,6 +281,7 @@ $quoting_font: Delius, Constantia, Palatino, serif
     +bubble_border
     +literal_style
     overflow: auto
+    white-space: pre-wrap
 
     &::-webkit-scrollbar
       width: 1ex
